--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: SmartSnipe
 ---
 <div class="blurb">
-	<h1>Filler Text!</h1>
+	<h1>SmartSnipe</h1>
 	<p>More Filler <em>Filler</em> Don't trust me. <a href="/about">Read more about us here</a></p>
 </div><!-- /.blurb -->
