--- a/team/index.html
+++ b/team/index.html
@@ -5,4 +5,5 @@ title: SmartSnipe Team
 <div class="blurb">
 	<h1>The SmartSnipe Team</h1>
 	<p>The SmartSnipe team consists of five University of Waterloo Mechanical/Mechatronics engineering students who are currently finishing up their fourth year. </p>
+	<img src="/Assets/teamshot.jpg" alt ="Team Shot">
 </div><!-- /.blurb -->
