add image to blog

--- a/team/index.html
+++ b/team/index.html
@@ -6,4 +6,5 @@ title: SmartSnipe Team
 	<h1>The SmartSnipe Team</h1>
 	<p>The SmartSnipe team consists of five University of Waterloo Mechanical/Mechatronics engineering students who are currently finishing up their fourth year. </p>
 	<img src="/Assets/teamshot.jpg" alt ="Team Shot">
+	<p>From left to right: Nick Sentjens, Brenden Henriques, James Loic Azzalini, Tomas Bakos Lang, Devon Weinberger</p>
 </div><!-- /.blurb -->
