--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: SmartSnipe
 ---
 <div class="blurb">
 	<h1>SmartSnipe</h1>
-	<p>More Filler <em>Filler</em> Don't trust me. <a href="/about">Read more about us here</a></p>
+	<p>SmartSnipe is revolutionizing how hockey players train and helping to create better players. </p>
 </div><!-- /.blurb -->
