--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@ layout: default
 title: SmartSnipe About
 ---
 <div class="blurb">
-	<h1>About</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>About SmartSnipe</h1>
+	<p>At SmartSnipe our top priority is building a product that positively impact hockey players development and help them play to their full potential. There are currently no products on the market that allow a player to practice their shooting that is representitive of real world situations. </p>
+	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. </p>> 
 </div><!-- /.blurb -->
