--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: SmartSnipe
 ---
 <div class="blurb">
 	<h1>SmartSnipe</h1>
-	<p>SmartSnipe is revolutionizing how hockey players train and helping to create better players. </p>
+	<p>SmartSnipe is revolutionizing how hockey players train. </p>
+	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" class="center">
 </div><!-- /.blurb -->
