--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@ title: SmartSnipe
 <div class="blurb">
 	<h1>SmartSnipe</h1>
 	<p>SmartSnipe is revolutionizing how hockey players train. </p>
-	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" class="center">
+	<center>
+	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad">
+	</center>
 </div><!-- /.blurb -->
