--- a/team/index.html
+++ b/team/index.html
@@ -5,6 +5,8 @@ title: SmartSnipe Team
 <div class="blurb">
 	<h1>The SmartSnipe Team</h1>
 	<p>The SmartSnipe team consists of five University of Waterloo Mechanical/Mechatronics engineering students who are currently finishing up their fourth year. </p>
-	<img src="/Assets/teamshot.jpg" alt ="Team Shot" class="center">
-	<p style="font-size:75%;">From left to right: Nick Sentjens (Mechatronics), Brenden Henriques (Mechatronics), James Loic Azzalini (Mechatronics), Tomas Bakos Lang (Mechatronics), Devon Weinberger (Mechanical)</p>
+	<center>
+	<img src="/Assets/teamshot.jpg" alt ="Team Shot">
+	</center>>
+	<p style="font-size:90%;">From left to right: Nick Sentjens (Mechatronics), Brenden Henriques (Mechatronics), James Loic Azzalini (Mechatronics), Tomas Bakos Lang (Mechatronics), Devon Weinberger (Mechanical)</p>
 </div><!-- /.blurb -->
