Small color changes

--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,6 @@ title: SmartSnipe About
 ---
 <div class="blurb">
 	<h1>About SmartSnipe</h1>
-	<p>At SmartSnipe our top priority is building a product that positively impact hockey players development and help them play to their full potential. There are currently no products on the market that allow a player to practice their shooting that is representitive of real world situations. </p>
-	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. </p>> 
+	<p>At SmartSnipe our top priority is building a product that positively impact hockey players development and help them play to their full potential. There are currently no products on the market that allow a player to practice their shooting that is representitive of in game situations. </p>
+	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. The net comes equipped with five slots that open and close to simulate goal scoring opportunities, a radar gun to measure shot speed and a camera to analyze technicque. </p>> 
 </div><!-- /.blurb -->
