--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@ title: SmartSnipe
 <div class="blurb">
 	<h1>SmartSnipe</h1>
 	<p>SmartSnipe is revolutionizing how hockey players train. </p>
-	<center>
-	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad">
-	</center>
+	<div class="row">
+	  <div class="column">
+	    <img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" style="width:100%">
+	  </div>
+	  <div class="column">
+	    <img src="/Assets/net.GIF" alt ="SmartSnipe Gif" style="width:100%">
+	  </div>
+	</div>
 </div><!-- /.blurb -->
