--- a/team/index.html
+++ b/team/index.html
@@ -4,7 +4,7 @@ title: SmartSnipe Team
 ---
 <div class="blurb">
 	<h1>The SmartSnipe Team</h1>
-	<p>The SmartSnipe team consists of five University of Waterloo Mechanical/Mechatronics engineering students who are currently finishing up their fourth year. </p>
+	<p>The SmartSnipe team consists of five University of Waterloo Mechanical/Mechatronics Engineering students who are currently finishing up their fourth year. We are all passionate about the game that has impacted us in such a positive way. </p>
 	<center>
 	<img src="/Assets/teamshot.jpg" alt ="Team Shot">
 	</center>>
