Small color changes

--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,11 @@ title: SmartSnipe About
 	<h1>About SmartSnipe</h1>
 	<p>At SmartSnipe our top priority is building a product that positively impact hockey players development and help them play to their full potential. </p>
 	<center>
-	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" style="width:100%">
-	<center>
+	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad">
+	</center>
 	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. The net comes equipped with five slots that open and close to simulate goal scoring opportunities, a radar gun to measure shot speed and a camera to analyze technicque. </p> 
-	<p>Players statistics such as shot speed, reaction time and accuracy are </p>
+	<center>
+	<img src="iOS.png" alt ="SmartSnipe iOS">
+	</center>
+	<p>Players statistics such as shot speed, reaction time and accuracy are tracked by the net and displayed to the user on an iOS application. The user can also configure settings for the net on the app such as how quickly should the holes open.</p>
 </div><!-- /.blurb -->
