Small color changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title: SmartSnipe
 <div class="blurb">
 	<h1>SmartSnipe</h1>
 	<p>SmartSnipe is revolutionizing how hockey players train. </p>
-	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad">
-	<img src="/Assets/net.GIF" alt ="SmartSnipe Gif">
+	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" hspace="20">
+	<img src="/Assets/net.GIF" alt ="SmartSnipe Gif" hspace="20">
 </div><!-- /.blurb -->
