Small color changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ title: SmartSnipe
 	<p>SmartSnipe is revolutionizing how hockey players train. </p>
 	<center>
 		<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" hspace="20">
-		<img src="/Assets/net.GIF" alt ="SmartSnipe Gif" hspace="20">
+		<img src="/Assets/resized-gif.gif" alt ="SmartSnipe Gif" hspace="20">
 	</center>
 </div><!-- /.blurb -->
