--- a/about/index.html
+++ b/about/index.html
@@ -8,9 +8,9 @@ title: SmartSnipe About
 	<center>
 	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad">
 	</center>
-	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. The net comes equipped with five slots that open and close to simulate goal scoring opportunities, a radar gun to measure shot speed and a camera to analyze technicque. </p> 
+	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. The net comes equipped with five slots that open and close to simulate goal scoring opportunities, a radar gun to measure shot speed and a camera to analyze technique. </p> 
 	<center>
-	<img src="ios.png" alt ="SmartSnipe iOS">
+	<img src="/Assets/ios.png" alt ="SmartSnipe iOS">
 	</center>
 	<p>Players statistics such as shot speed, reaction time and accuracy are tracked by the net and displayed to the user on an iOS application. The user can also configure settings for the net on the app such as how quickly should the holes open.</p>
 </div><!-- /.blurb -->
