--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: SmartSnipe
 ---
 <div class="blurb">
 	<h1>SmartSnipe</h1>
-	<p>SmartSnipe is revolutionizing how hockey players train. </p>
+	<p>SmartSnipe is revolutionizing how hockey players train. Say goodbye to practicing your hockey shot on an empty net or using a static shooter tutor. SmartSnipe has created a smart hockey net to allow players to improve their skills, track their shooting statistics and to practice like they are in a game. </p>
 	<center>
 		<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" hspace="20">
 		<img src="/Assets/resized-gif.gif" alt ="SmartSnipe Gif" hspace="20">
