Small feedback changes

--- a/about/index.html
+++ b/about/index.html
@@ -13,4 +13,8 @@ title: SmartSnipe About
 	<img src="/Assets/ios.png" alt ="SmartSnipe iOS">
 	</center>
 	<p>Players statistics such as shot speed, reaction time and accuracy are tracked by the net and displayed to the user on an iOS application. The user can also configure settings for the net on the app such as how quickly should the holes open.</p>
+	<center>
+	<img src="/Assets/computervision.gif" alt ="Vision gif">
+	</center>
+	<p>As well the net comes equipped with a Xbox Kinect. The Kinect will be used for player detection, pose estimation and stick tracking. </p>
 </div><!-- /.blurb -->
