--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: SmartSnipe
 ---
 <div class="blurb">
 	<h1>SmartSnipe</h1>
+	<p>There is a need to create a better method of practicing shooting in hockey, that is more representative of real game situations.</p>
 	<p>SmartSnipe is revolutionizing how hockey players train. Say goodbye to practicing your hockey shot on an empty net or using a static shooter tutor. SmartSnipe has created a smart hockey net to allow players to improve their skills, track their shooting statistics and to practice like they are in a game. </p>
 	<center>
 		<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" hspace="20">
