--- a/team/index.html
+++ b/team/index.html
@@ -8,5 +8,5 @@ title: SmartSnipe Team
 	<center>
 	<img src="/Assets/teamshot.jpg" alt ="Team Shot">
 	</center>>
-	<p>From left to right: Nick Sentjens (Mechatronics), Brenden Henriques (Mechatronics), James Loic Azzalini (Mechatronics), Tomas Bakos Lang (Mechatronics), Devon Weinberger (Mechanical)</p>
+	<p>From left to right: Nick Sentjens (Mechatronics), Brenden Henriques (Mechatronics), Loïc James Azzalini (Mechatronics), Tomas Bakos Lang (Mechatronics), Devon Weinberger (Mechanical)</p>
 </div><!-- /.blurb -->
