Small feedback changes

--- a/about/index.html
+++ b/about/index.html
@@ -16,5 +16,5 @@ title: SmartSnipe About
 	<center>
 	<img src="/Assets/computervision.gif" alt ="Vision gif">
 	</center>
-	<p>As well the net comes equipped with a Xbox Kinect. The Kinect will be used for player detection, pose estimation and stick tracking. </p>
+	<p>As well, the net comes equipped with a Xbox Kinect. The Kinect will be used for player detection, pose estimation and stick tracking to enhance how players train. </p>
 </div><!-- /.blurb -->
