--- a/about/index.html
+++ b/about/index.html
@@ -4,17 +4,13 @@ title: SmartSnipe About
 ---
 <div class="blurb">
 	<h1>About SmartSnipe</h1>
-	<p>At SmartSnipe our top priority is building a product that positively impact hockey players development and help them play to their full potential. </p>
-	<center>
-	<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad">
-	</center>
-	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. The net comes equipped with five slots that open and close to simulate goal scoring opportunities, a radar gun to measure shot speed and a camera to analyze technique. </p> 
+	<p>SmartSnipe is a smart shooting board that can be attached to any hockey net to immediatly provide a shooter with an experience that simulates real game situations. The net comes equipped with five slots that open and close to simulate goal scoring opportunities, a radar gun to measure shot speed, and a camera to analyze technique. </p> 
 	<center>
 	<img src="/Assets/ios.png" alt ="SmartSnipe iOS">
 	</center>
-	<p>Players statistics such as shot speed, reaction time and accuracy are tracked by the net and displayed to the user on an iOS application. The user can also configure settings for the net on the app such as how quickly should the holes open.</p>
+	<p>Player statistics such as shot speed, reaction time, and accuracy are tracked by the smart shooter tutor and displayed to the user in an iOS application. The user can also configure the training settings for the shooting board using the app.</p>
 	<center>
 	<img src="/Assets/computervision.gif" alt ="Vision gif">
 	</center>
-	<p>As well, the net comes equipped with a Xbox Kinect. The Kinect will be used for player detection, pose estimation and stick tracking to enhance how players train. </p>
+	<p>SmartSnipe comes equipped with a Xbox Kinect. The Kinect will be used for player detection, pose estimation, and stick tracking. </p>
 </div><!-- /.blurb -->
