--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ title: SmartSnipe
 ---
 <div class="blurb">
 	<h1>SmartSnipe</h1>
-	<p>There is a need to create a better method of practicing shooting in hockey that is more representative of real game situations. The most popular current solution is the stationary hockey shooting board, or shooter tutor. This current solution does not adequately satisfy the stated need since stationary holes do not reflect the real game environment. Stationary boards also have no method of promoting reaction time training, appropriate shot location identification, and do not provide the player with any feedback about their performance.</p>
-	<p>SmartSnipe is a smart version of the stationary shooter tutor. The smart shooting board will have doors that open and close to simulate the open spots that appear around a goalie during real game situations. The player will practice identifying and reacting quickly to the open targets. Similar to a stationary shooting board, the smart shooting board will be portable, able to be set up on the ice during practice, or at home in the garage or backyard. The board will be durable enough to withstand hard hockey shots with a puck. Sensors will be incorporated that can provide shot analytics to the player, such as shot speed and reaction time. Lastly, due to the advantageous position of being located in the net, the board will be fitted with a camera module to provide footage from the eyes-of-the-goalie perspective. The footage will be used to support motion research in sports, such as action recognition and pose estimation.</p>
-	<center>
+	<p>SmartSnipe is the Capstone project of five University of Waterloo Mechanical/Mechatronic engineering students.<p>
+	<p>SmartSnipe is a smart shooter tutor with doors that open and close to simulate the real game environment. The shooting board is equipped with a radar gun, reaction time sensors, and a camera for computer vision analysis.<p>
 		<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" hspace="20">
 		<img src="/Assets/resized-gif.gif" alt ="SmartSnipe Gif" hspace="20">
 	</center>
