--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: SmartSnipe
 	<h1>SmartSnipe</h1>
 	<p>SmartSnipe is the Capstone project of five University of Waterloo Mechanical/Mechatronic engineering students.<p>
 	<p>SmartSnipe is a smart shooter tutor with doors that open and close to simulate the real game environment. The shooting board is equipped with a radar gun, reaction time sensors, and a camera for computer vision analysis.<p>
+	</center>
 		<img src="/Assets/SmartSnipeCad.png" alt ="SmartSnipe Cad" hspace="20">
 		<img src="/Assets/resized-gif.gif" alt ="SmartSnipe Gif" hspace="20">
 	</center>
